--- a/docs/content/杂谈/数字游民完全指南.md
+++ b/docs/content/杂谈/数字游民完全指南.md
@@ -391,7 +391,7 @@ Coliving = 住宿 + 办公空间 + 社区。
 在路上恋爱是困难的。你们都有各自的“签证倒计时”。
 **策略：**
 *   **寻找同类**：只和游民约会。因为只有游民理解游民。
-*   **"Travel Together" Test**：如果想确认关系，尝试一起旅行两周。这是最高强度的压力测试。
+*   "**Travel Together**" **Test**：如果想确认关系，尝试一起旅行两周。这是最高强度的压力测试。
 
 ### 第十五章：游民家庭 —— 关于教育的实验
 
